--- a/mechanism_evaluation.ipynb
+++ b/mechanism_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,6 +55,7 @@
       "Loading...\tdata/Illinois_100000_20190227\n",
       "Loading...\tdata/Texas_100000_20190227\n",
       "Loading...\tdata/California_100000_20190227\n",
+      "Loading...\tdata/Georgia_100000_20190227\n",
       "Loading...\tdata/New York_100000_20190227\n"
      ]
     }
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -943,14 +944,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MVG_identity_framingham_2_20190227\n"
+      "MVG_identity_framingham_100_20190227\n"
      ]
     }
    ],
@@ -966,7 +967,9 @@
     "                               str(evaluation_samples), \n",
     "                               datetime.date.today().strftime(\"%Y%m%d\")])\n",
     "\n",
-    "print(result_pickle_name)"
+    "print(result_pickle_name)\n",
+    "\n",
+    "model_params = dict(epochs=10, batch_size=16, verbose=0)"
    ]
   },
   {
@@ -978,14 +981,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sensitivity = get_query_row_sensitivity(unit_of_change='singleton',\n",
+    "sensitivity = get_query_row_sensitivity(query_type='identity',\n",
     "                                        query_scale=target_feature_bounds,\n",
-    "                                        data_shape=(evaluation_train_size, n_features))\n",
+    "                                        query_shape=(evaluation_train_size, n_features))\n",
     "\n",
+    "gamma = get_query_gamma(query_scale=target_feature_bounds, \n",
+    "                        query_shape=(evaluation_train_size, n_features), \n",
+    "                        query_type='identity')\n",
     "\n",
     "# Allocation percentages in 'key_features_allocation' to key features \n",
     "# and remainder to all other features\n",
@@ -994,25 +1000,22 @@
     "\n",
     "feature_allocations = dict()\n",
     "for allocation in key_features_allocation:\n",
+    "    \n",
     "    feature_allocations[allocation] = [ \n",
     "        allocation / len(key_features_binary_mvg)\n",
     "        if feature in key_features_binary_mvg \n",
-    "        else (1 - allocation) / (features - len(key_features_binary_mvg))\n",
-    "        for feature in new_num_features \n",
-    "    ]"
+    "        else (1 - allocation) / (n_features - len(key_features_binary_mvg))\n",
+    "        for feature in evaluation_features \n",
+    "    ]\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Matrix-variate Gaussian Mechnaism Evaluation"
+   ]
   },
   {
    "cell_type": "code",
@@ -1035,33 +1038,38 @@
     "    )\n",
     "        \n",
     "    for i in xrange(evaluation_samples):\n",
-    "    \n",
-    "\n",
-    "\n",
-    "        X_mvg_sdp = matrixvariate_gaussian_mechanism_sample(data=X,\n",
-    "                                                            **params)\n",
-    "        nn_fit_params = dict(\n",
-    "            epochs=10, \n",
-    "            batch_size=16,\n",
-    "            verbose=0\n",
-    "        )\n",
-    "\n",
+    "        start_clock = datetime.datetime.now() \n",
+    "        train_ind, test_ind = \\\n",
+    "            test_train_split(len(data),\n",
+    "                             evaluation_test_split)\n",
+    "            \n",
+    "        sample = matrixvariate_gaussian_mechanism_sample(data=data.iloc[train_ind],\n",
+    "                                                         **params)\n",
+    "        \n",
+    "        end_sample_clock = datetime.datetime.now() \n",
+    "        \n",
+    "        metric_result = seq_nn_cross_validation(train_data=sample,\n",
+    "                                                test_data=data,\n",
+    "                                                X_labels=predictors,\n",
+    "                                                y_label=response,\n",
+    "                                                train_ind=train_ind, \n",
+    "                                                test_ind=test_ind,\n",
+    "                                                fit_params=model_params)\n",
+    "        \n",
+    "        end_loop_clock = datetime.datetime.now() \n",
+    "        \n",
     "        result = record_result(results=result, \n",
-    "                           column_names=results_columns, \n",
-    "                           new_data=[[mechanism, \n",
-    "                                      query_type, \n",
-    "                                      i+1,\n",
-    "                                      metric, \n",
-    "                                      metric_result, \n",
-    "                                      (end_sample_clock - start_clock).total_seconds(),\n",
-    "                                      (end_loop_clock - start_clock).total_seconds()\n",
-    "                                     ]]) = \\\n",
-    "            seq_nn_cross_validation(train_data=X_mvg_sdp, \n",
-    "                                    test_data=X, \n",
-    "                                    folds=5,\n",
-    "                                    X_labels=X_names,\n",
-    "                                    y_label=y_name,\n",
-    "                                    fit_params=nn_fit_params)"
+    "                               column_names=results_columns, \n",
+    "                               new_data=[[mechanism, \n",
+    "                                          query_type, \n",
+    "                                          i+1,\n",
+    "                                          metric, \n",
+    "                                          metric_result, \n",
+    "                                          (end_sample_clock - start_clock).total_seconds(),\n",
+    "                                          (end_loop_clock - start_clock).total_seconds()\n",
+    "                                         ]])\n",
+    "        \n",
+    "            "
    ]
   },
   {
@@ -1200,6 +1208,126 @@
     "        model.predict(X_test, batch_size=fit_params['batch_size']),\n",
     "        y_test)\n",
     "\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "\n",
+    "# Establish parameters: gaussian_sensitivity, MVG_sensitivity\n",
+    "\n",
+    "\n",
+    "def centered_covariance_query_sensitivity(n, m, c):\n",
+    "    '''\n",
+    "       'A Differential Privacy Mechanism Design Under Matrix-Valued Query'\n",
+    "        Chanyaswad, Dytso, Poor & Mittal 2018, p.18.:\n",
+    "        https://arxiv.org/abs/1802.10077 (accessed 16/12/2018) [1]\n",
+    "\n",
+    "       Requires\n",
+    "           n   - divisor of query function\n",
+    "           m   - number of unit values / observations to be varied\n",
+    "                 under adjacency definition\n",
+    "           c   - maximum possible value in range of single observation\n",
+    "\n",
+    "       Returns - Sensitivity calculation for zero mean\n",
+    "                 covariance estimation query\n",
+    "                 ie f(X) = n^-1 * transpose(X)X\n",
+    "    '''\n",
+    "    return (2 * float(m) * float(c)**2) / float(n)\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "    Examples:\n",
+    "        get_query_point_sensitivity(query_type='identity',\n",
+    "                                    query_scale=feature_scale,\n",
+    "                                    query_shape=(train_size,features)\n",
+    "        get_query_point_sensitivity(query_type='covariance',\n",
+    "                                    query_scale=feature_scale,\n",
+    "                                    query_shape=(train_size,features)\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def get_query_point_sensitivity(query_scale, query_shape, query_type):\n",
+    "    if query_type == 'identity':\n",
+    "        # Global maximum of change for any\n",
+    "        # single point change in query f(X) = X\n",
+    "        result = abs(numpy.subtract(query_scale[0], query_scale[1]))\n",
+    "    elif query_type == 'covariance':\n",
+    "        # Global maximum of change for a single point\n",
+    "        # change in query f(X) = (1/n)*transpose(X)X\n",
+    "        result = centered_covariance_query_sensitivity(n=query_shape[0],\n",
+    "                                                       m=1.0,\n",
+    "                                                       c=query_scale[1])\n",
+    "    else:\n",
+    "        print(\"get_query_point_sensitivity: \\\n",
+    "        required query_type in ('identity','covariance')\")\n",
+    "        result = None\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "    Examples:\n",
+    "        get_query_row_sensitivity(query_type='identity',\n",
+    "                                  query_scale=feature_scale,\n",
+    "                                  query_shape=(train_size,features))\n",
+    "        get_query_row_sensitivity(query_type='covariance',\n",
+    "                                  query_scale=feature_scale,\n",
+    "                                  query_shape=(train_size,features))\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def get_query_row_sensitivity(query_scale, query_shape, query_type):\n",
+    "    if query_type == 'identity':\n",
+    "        # Global maximum of change for any data row / observation\n",
+    "        # change in query f(X) = X\n",
+    "        # Section 8.1.3 p30 of paper [1]\n",
+    "        sensitivity = get_query_point_sensitivity(query_scale,\n",
+    "                                                  query_shape,\n",
+    "                                                  'identity')\n",
+    "        result = pow(query_shape[1] * pow(sensitivity, 2),\n",
+    "                     0.5)\n",
+    "    elif query_type == 'covariance':\n",
+    "        # Global maximum of change for any data\n",
+    "        # row / observation change in query f(X) = n^-1 * transpose(X)X\n",
+    "        result = centered_covariance_query_sensitivity(n=query_shape[0],\n",
+    "                                                       m=query_shape[1],\n",
+    "                                                       c=query_scale[1])\n",
+    "    else:\n",
+    "        print(\"get_query_row_sensitivity: \\\n",
+    "        required query_type in ('identity','covariance')\")\n",
+    "        result = None\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "'''\n",
+    "    Examples:\n",
+    "        get_query_gamma(feature_scale,\n",
+    "                        (train_size,features),\n",
+    "                        'identity')\n",
+    "        get_query_gamma(feature_scale,\n",
+    "                        (features,features),\n",
+    "                        query_type='covariance'))\n",
+    "'''\n",
+    "\n",
+    "\n",
+    "def get_query_gamma(query_scale, query_shape, query_type):\n",
+    "    obs, features = query_shape\n",
+    "    if query_type == 'identity':\n",
+    "        # Defined as sup X ||f(X)||F, where ||f(X)||F is the\n",
+    "        # Frobenious norm of the query f(X)\n",
+    "        result = pow(obs * features * query_scale[1], 0.5)\n",
+    "    elif query_type == 'covariance':\n",
+    "        # Defined as m * c^2 Section 4.4 example 1, p17 in [1]\n",
+    "        result = features*pow(query_scale[1], 2)\n",
+    "    else:\n",
+    "        print(\"get_query_gamma: \\\n",
+    "        required query_type in ('identity','covariance')\")\n",
+    "        result = None\n",
     "    return result\n"
    ]
   },
