minor update mechanism_evaluation

--- a/evaluating_privatisation_mechanisms_by_modelling_synthetic_medical_data.ipynb
+++ b/evaluating_privatisation_mechanisms_by_modelling_synthetic_medical_data.ipynb
@@ -524,7 +524,7 @@
     "'''\n",
     "    Binary Allocation Strategy\n",
     "    \n",
-    "    Key features are proprotional to the singular values or explained directional variance\n",
+    "    Features allocations are proprotional to the singular values or explained directional variance\n",
     "    \n",
     "    Directions are equal to eigenvectors of the sample covariance. \n",
     "    These are the orthogonal primary axis of the variation in the sample covariance \n",
