--- a/mechanism_evaluation.ipynb
+++ b/mechanism_evaluation.ipynb
@@ -957,7 +957,7 @@
    ],
    "source": [
     "# labelling result values for mechanism\n",
-    "mechanism = 'MVG'\n",
+    "mechanism = 'MVG_binary_knowledge'\n",
     "query_type = 'identity'\n",
     "metric = 'rmse'\n",
     "\n",
@@ -1006,8 +1006,7 @@
     "        if feature in key_features_binary_mvg \n",
     "        else (1 - allocation) / (n_features - len(key_features_binary_mvg))\n",
     "        for feature in evaluation_features \n",
-    "    ]\n",
-    "    \n"
+    "    ]"
    ]
   },
   {
@@ -1071,6 +1070,46 @@
     "        \n",
     "            "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Binary Allocation Strategy - Key features\n",
+    "   \n",
+    "    Features allocations are proprotional to the singular values or explained directional variance\n",
+    "    \n",
+    "    Directions are equal to eigenvectors of the sample covariance. \n",
+    "    These are the orthogonal primary axis of the variation in the sample covariance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
