minor update mechanism_evaluation

--- a/mechanism_evaluation.ipynb
+++ b/mechanism_evaluation.ipynb
@@ -387,9 +387,9 @@
     "# 1 / number of observations\n",
     "delta = pow(data.shape[0], -1)\n",
     "\n",
-    "sensitivity = get_query_row_sensitivity(unit_of_change='tuple',\n",
+    "sensitivity = get_query_row_sensitivity(query_type='covariance',\n",
     "                                        query_scale=target_feature_bounds,\n",
-    "                                        data_shape=data.shape)"
+    "                                        query_shape=data.shape)"
    ]
   },
   {
@@ -489,9 +489,9 @@
     "# 1 / number of observations\n",
     "delta = pow(data.shape[0], -1)\n",
     "\n",
-    "sensitivity = get_query_row_sensitivity(unit_of_change='singleton',\n",
+    "sensitivity = get_query_row_sensitivity(query_type='singleton',\n",
     "                                        query_scale=target_feature_bounds,\n",
-    "                                        data_shape=data.shape)"
+    "                                        query_shape=data.shape)"
    ]
   },
   {
@@ -693,9 +693,9 @@
     "# 1 / number of observations\n",
     "delta = pow(evaluation_train_size, -1)\n",
     "\n",
-    "sensitivity = get_query_point_sensitivity(unit_of_change='singleton',\n",
+    "sensitivity = get_query_point_sensitivity(query_type='singleton',\n",
     "                                          query_scale=target_feature_bounds,\n",
-    "                                          data_shape=(evaluation_train_size, n_features))"
+    "                                          query_shape=(evaluation_train_size, n_features))"
    ]
   },
   {
@@ -1084,32 +1084,112 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Evaluation setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MVG_binary_directed_identity_framingham_2_20190227\n"
+     ]
+    }
+   ],
+   "source": [
+    "# labelling result values for mechanism\n",
+    "mechanism = 'MVG_binary_directed'\n",
+    "query_type = 'identity'\n",
+    "metric = 'rmse'\n",
+    "\n",
+    "result_pickle_name = '_'.join([mechanism, \n",
+    "                               query_type, \n",
+    "                               ''.join(response),\n",
+    "                               str(evaluation_samples), \n",
+    "                               datetime.date.today().strftime(\"%Y%m%d\")])\n",
+    "\n",
+    "print(result_pickle_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Differential Privacy parameters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "get_query_row_sensitivity() got an unexpected keyword argument 'data_shape'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-85bd856e1b5b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m svd_sensitivity = get_query_row_sensitivity(query_type='covariance',\n\u001b[1;32m      5\u001b[0m                                             \u001b[0mquery_scale\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtarget_feature_bounds\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m                                             data_shape=data.shape)\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;31m# DP MVG parameters\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: get_query_row_sensitivity() got an unexpected keyword argument 'data_shape'"
+     ]
+    }
+   ],
+   "source": [
+    "# DP SVD parameters\n",
+    "svd_privacy_allocation = 0.2\n",
+    "\n",
+    "svd_sensitivity = get_query_row_sensitivity(query_type='covariance',\n",
+    "                                            query_scale=target_feature_bounds,\n",
+    "                                            query_shape=data.shape)\n",
+    "\n",
+    "# DP MVG parameters\n",
+    "\n",
+    "sensitivity = get_query_row_sensitivity(query_type='identity',\n",
+    "                                        query_scale=target_feature_bounds,\n",
+    "                                        query_shape=(evaluation_train_size, n_features))\n",
+    "\n",
+    "gamma = get_query_gamma(query_scale=target_feature_bounds, \n",
+    "                        query_shape=(evaluation_train_size, n_features), \n",
+    "                        query_type='identity')"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "query = centered_sample_covariance_matrix(X=data)\n",
+    "\n",
+    "cov_sample = gaussian_mechanism_matrix_sample(\n",
+    "                data=query,\n",
+    "                epsilon=epsilon*svd_privacy_allocation,\n",
+    "                delta=delta*svd_privacy_allocation,\n",
+    "                sensitivity=svd_sensitivity,\n",
+    "                symmetric=True,\n",
+    "                verbose=False)\n",
+    "\n",
+    "precision_directions, singular_values, _ = numpy.linalg.svd(cov_sample, full_matrices=True)\n",
+    "\n",
+    "sv_proportions = singular_values / numpy.sum(singular_values)\n",
+    "sv_allocations = [0.55,0.75,0.95]\n",
+    "\n",
+    "feature_allocations = dict()\n",
+    "for allocation in sv_allocations:\n",
+    "    feature_allocations[allocation] = [ \n",
+    "        ((1 - allocation) / len(sv_proportions)) + \n",
+    "        (sv * allocation)\n",
+    "        for sv in sv_proportions\n",
+    "    ]"
+   ]
   },
   {
    "cell_type": "code",
