--- a/mechanism_evaluation.ipynb
+++ b/mechanism_evaluation.ipynb
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -851,14 +851,28 @@
     "\n",
     "gamma = get_query_gamma(query_scale=target_feature_bounds, \n",
     "                        query_shape=(evaluation_train_size, n_features), \n",
-    "                        query_type='identity')"
+    "                        query_type='identity')\n",
+    "\n",
+    "model_params = dict(epochs=5, batch_size=128, verbose=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'result_pickle_location' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-ad287d7e0f1e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     70\u001b[0m                                          ]])\n\u001b[1;32m     71\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 72\u001b[0;31m \u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresult_pickle_location\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mresult_pickle_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'result_pickle_location' is not defined"
+     ]
+    }
+   ],
    "source": [
     "query = centered_sample_covariance_matrix(X=data)\n",
     "\n",
@@ -903,9 +917,7 @@
     "            precision_direction=precision_directions,\n",
     "            covariance_direction='unimodal features',\n",
     "            covariance_method='binary'\n",
-    "        )\n",
-    "\n",
-    "        \n",
+    "        )        \n",
     "         \n",
     "        train_ind, test_ind = \\\n",
     "            test_train_split(len(data),\n",
@@ -945,24 +957,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mechanism</th>\n",
+       "      <th>query</th>\n",
+       "      <th>iteration</th>\n",
+       "      <th>metric</th>\n",
+       "      <th>result</th>\n",
+       "      <th>mechanism runtime (s)</th>\n",
+       "      <th>total runtime (s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.75</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.115408</td>\n",
+       "      <td>80.476885</td>\n",
+       "      <td>840.594722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.95</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.117232</td>\n",
+       "      <td>92.513266</td>\n",
+       "      <td>921.079570</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.55</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>1</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.116764</td>\n",
+       "      <td>85.624786</td>\n",
+       "      <td>782.176285</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.75</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.116378</td>\n",
+       "      <td>96.758153</td>\n",
+       "      <td>849.392658</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.95</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.117133</td>\n",
+       "      <td>87.585062</td>\n",
+       "      <td>773.625063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>MVG_binary_directed_0.55</td>\n",
+       "      <td>identity</td>\n",
+       "      <td>2</td>\n",
+       "      <td>rmse</td>\n",
+       "      <td>0.115434</td>\n",
+       "      <td>83.667294</td>\n",
+       "      <td>769.779281</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  mechanism     query  iteration metric    result  \\\n",
+       "0  MVG_binary_directed_0.75  identity          1   rmse  0.115408   \n",
+       "0  MVG_binary_directed_0.95  identity          1   rmse  0.117232   \n",
+       "0  MVG_binary_directed_0.55  identity          1   rmse  0.116764   \n",
+       "0  MVG_binary_directed_0.75  identity          2   rmse  0.116378   \n",
+       "0  MVG_binary_directed_0.95  identity          2   rmse  0.117133   \n",
+       "0  MVG_binary_directed_0.55  identity          2   rmse  0.115434   \n",
+       "\n",
+       "   mechanism runtime (s)  total runtime (s)  \n",
+       "0              80.476885         840.594722  \n",
+       "0              92.513266         921.079570  \n",
+       "0              85.624786         782.176285  \n",
+       "0              96.758153         849.392658  \n",
+       "0              87.585062         773.625063  \n",
+       "0              83.667294         769.779281  "
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
+   ]
   },
   {
    "cell_type": "code",
